--- a/app/views/manager/forms/show.html.haml
+++ b/app/views/manager/forms/show.html.haml
@@ -6,7 +6,7 @@
         = image_tag @form.description_photo, alt: "Form Description", class: "object-cover rounded-lg shadow-lg max-w-full h-auto md:max-w-1/2"
 
     .text-container.w-full
-      %p.text-base.text-shadowy-200.leading-relaxed= @form.description.html_safe
+      %p.text-base.text-shadowy-200.leading-relaxed= @form.description&.html_safe
 
 = form_with model: [:manager, @profile], local: true, class: "space-y-12", data: { controller: 'form-show' } do |form|
   = form.hidden_field :form_id, value: @form.id
