--- a/app/components/custom_checkbox_component.html.haml
+++ b/app/components/custom_checkbox_component.html.haml
@@ -1,4 +1,5 @@
 .mt-2{data: { controller: "custom-checkbox"}}
+  = @form.label @key, @label, class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200 mb-1'
   - if @value.present?
     = @form.check_box @key, {class: 'hidden', data: { custom_checkbox_target: "checkbox" }, checked: @checked}, @value
   - else
@@ -9,6 +10,10 @@
       %span.opacity-100.duration-200.ease-in.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': 'true', data: {custom_checkbox_target: 'off'}}
         %svg.h-3.w-3.text-gray-400{fill: "none", viewbox: "0 0 12 12"}
           %path{d: "M4 8l2-2m0 0l2-2M6 6L4 4m2 2l2 2", stroke: "currentColor", 'stroke-linecap': "round", 'stroke-linejoin': "round", 'stroke-width': '2'}
-      %span.opacity-0.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {custom_checkbox_target: 'on'}}
+      %span.hidden.duration-100.ease-out.absolute.inset-0.flex.h-full.w-full.items-center.justify-center.transition-opacity{'aria-hidden': "true", data: {custom_checkbox_target: 'on'}}
         %svg.h-3.w-3.text-indigo-600{fill: "currentColor", viewbox: "0 0 12 12"}
           %path{d: "M3.707 5.293a1 1 0 00-1.414 1.414l1.414-1.414zM5 8l-.707.707a1 1 0 001.414 0L5 8zm4.707-3.293a1 1 0 00-1.414-1.414l1.414 1.414zm-7.414 2l2 2 1.414-1.414-2-2-1.414 1.414zm3.414 2l4-4-1.414-1.414-4 4 1.414 1.414z"}
+
+  - if @model&.errors&.[](@key)&.present?
+    .text-red-500.text-sm
+      = @model.errors[@key].first
